--- a/vim/embed-flutter.html
+++ b/vim/embed-flutter.html
@@ -252,7 +252,15 @@ BSD-style license that can be found in the LICENSE file. -->
     </div>
     <div class="mdc-dialog__scrim"></div>
 </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-5V6ETC4BHQ');
+</script>
 </body>
 
 </html>
