attempts to build with fixes for timmaffett.github.io

--- a/clearconsole/index.html
+++ b/clearconsole/index.html
@@ -310,7 +310,7 @@
             <div class="mdc-dialog__content">
                 <div class="dart-container">
                     <div id="new-pad-select-dart" class="select-project-button mdc-ripple-surface mdc-ripple-surface--primary">
-                        <img src="/clearconsole/pictures/logo_dart.png"/>
+                        <img src="/pictures/logo_dart.png"/>
                         <span>Dart</span>
                     </div>
                     <div id="new-pad-html-switch-container" class="hide">
@@ -330,7 +330,7 @@
                 </div>
                 <div class="divider"></div>
                 <div id="new-pad-select-flutter" class="select-project-button mdc-ripple-surface mdc-ripple-surface--primary">
-                    <img src="/clearconsole/pictures/logo_flutter.png"/>
+                    <img src="/pictures/logo_flutter.png"/>
                     <span>Flutter</span>
                 </div>
             </div>
@@ -350,14 +350,5 @@
     </div>
     <div class="mdc-dialog__scrim"></div>
 </div>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5V6ETC4BHQ');
-</script>
 </body>
 </html>
