--- a/clearconsole/embed-dart.html
+++ b/clearconsole/embed-dart.html
@@ -15,7 +15,15 @@ BSD-style license that can be found in the LICENSE file. -->
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <title>DartPad</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-5V6ETC4BHQ');
+</script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
 
