--- a/clearconsole/embed-inline.html
+++ b/clearconsole/embed-inline.html
@@ -18,7 +18,15 @@ BSD-style license that can be found in the LICENSE file. -->
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-5V6ETC4BHQ');
+</script>
     <!-- codemirror -->
     <link href="packages/codemirror/css/codemirror.css" rel="stylesheet" media="screen">
     <link href="packages/codemirror/addon/lint/lint.css" rel="stylesheet" media="screen">
