--- a/clearconsole/workshops.html
+++ b/clearconsole/workshops.html
@@ -17,7 +17,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <title>DartPad Workshops</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-5V6ETC4BHQ');
+</script>
     <!-- styles -->
     <link href="styles/workshops.css" rel="stylesheet" media="screen">
 
