page titles for examples

--- a/vim/index.html
+++ b/vim/index.html
@@ -15,7 +15,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>DartPad</title>
+    <title>DartPad - vim keymap example</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
 <script>
