--- a/github/index.html
+++ b/github/index.html
@@ -15,7 +15,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>DartPad</title>
+    <title>DartPad Gist OAuth Example</title>
 
     <!-- styles -->
     <link href="styles/styles.css" rel="stylesheet" media="screen">
