added workshop with autosave example

--- a/worksave/workshops.html
+++ b/worksave/workshops.html
@@ -117,7 +117,7 @@
                             restart_alt
                     </button>
                     <button type="button" id="redo-button"
-                            title="go back to last edit"
+                            title="restore last edit"
                             hidden="true"
                             class="mdc-icon-button material-icons">
                             redo
