--- a/worksave/workshops.html
+++ b/worksave/workshops.html
@@ -16,7 +16,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>DartPad Workshops with Autosaving</title>
+    <title>DartPad Workshops</title>
 
     <!-- styles -->
     <link href="styles/workshops.css" rel="stylesheet" media="screen">
@@ -116,6 +116,14 @@
                             class="mdc-icon-button material-icons">
                             restart_alt
                     </button>
+                    <button type="button" id="show-solution-icon-button"
+                            title="show solution"
+                            hidden="true"
+                            class="mdc-icon-button material-icons">
+                            lightbulb
+                    </button>
+
+                    
                     <button type="button" id="redo-button"
                             title="restore last edit"
                             hidden="true"
@@ -326,14 +334,6 @@
     </div>
     <div class="mdc-dialog__scrim"></div>
 </div>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-5V6ETC4BHQ');
-</script>
 </body>
 </html>
