markdown kroki example

--- a/markdown_kroki/index.html
+++ b/markdown_kroki/index.html
@@ -28,7 +28,7 @@
         <div class="card">
           <div class="toolbar">
             <h2>Markdown</h2>
-            <span style="margin-left: auto;float:right;">Examples Group:&nbsp;
+            <span id="examplesbar" style="margin-left: auto;float:right;">Examples Group:&nbsp;
             <div class="radio" id="group1-radio">
               <i class="glyph">radio_button_unchecked</i>
                 #1
