--- a/flutter_font_picker/index.html
+++ b/flutter_font_picker/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/flutter_font_picker/">
+  <base href="https://timmaffett.github.io/flutter_font_picker/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -23,8 +23,8 @@
   <meta name="apple-mobile-web-app-title" content="example">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>example</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Flutter Font Picker Example</title>
+  <link rel="manifest" href="/flutter_font_picker/manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
