--- a/flutter_font_picker/index.html
+++ b/flutter_font_picker/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://timmaffett.github.io/flutter_font_picker/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -23,15 +23,15 @@
   <meta name="apple-mobile-web-app-title" content="example">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>Flutter Font Picker Example</title>
-  <link rel="manifest" href="/flutter_font_picker/manifest.json">
+  <title>example</title>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = "1478089112";
+    var serviceWorkerVersion = "4169293288";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
