--- a/flutter_font_picker/index.html
+++ b/flutter_font_picker/index.html
@@ -94,5 +94,14 @@
       loadMainDartJs();
     }
   </script>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5V6ETC4BHQ');
+</script>
 </body>
 </html>
