move to 1.0.3 custommousecursor

--- a/custom_mouse_cursor/index.html
+++ b/custom_mouse_cursor/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1292564091";
+    const serviceWorkerVersion = "1438131399";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -55,14 +55,5 @@
       });
     });
   </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5V6ETC4BHQ');
-</script>
 </body>
 </html>
