made future flutter symbols compatible

--- a/material_symbols_icons/index.html
+++ b/material_symbols_icons/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "2087893492";
+    const serviceWorkerVersion = "3153274685";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -64,5 +64,6 @@
 
   gtag('config', 'G-5V6ETC4BHQ');
 </script>
+
 </body>
 </html>
