--- a/smart_packages/smart_arrays_contour_finder/example.html
+++ b/smart_packages/smart_arrays_contour_finder/example.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <head>
-    <style>
-      #contour_canvas{border:1px solid darkgreen;}
-    </style>
-  </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<head>
+  <style>
+    #contour_canvas {
+       border:1px solid darkgreen;
+    }
+  </style>
+</head>
 
-  <body>
-  <canvas id = "contour_canvas" width = "700" height = "500"></canvas>
-  <script defer="true" src="example.dart.js"></script>
-  </body>
+<body>
+  <canvas id="contour_canvas" width="700" height="500"></canvas>
+</body>
+<script defer src="example.dart.js"></script>
 </html>
