--- a/smart_packages/smart_dialogs/example.html
+++ b/smart_packages/smart_dialogs/example.html
@@ -9,6 +9,6 @@
     <div id="app_div">
       <br>Cookie Notice: This web page does not store any user data.
     </div>
-    <script defer="true" src="main.dart.js"></script>
+    <script defer src="main.dart.js"></script>
   </body>
 </html>
