--- a/smart_packages/smart_arrays_lmfit/example.html
+++ b/smart_packages/smart_arrays_lmfit/example.html
@@ -10,6 +10,6 @@
 <div id="app_div">
     <div id="plot_div" onselectstart="return false;" ondragstart="return false;"></div>
 </div>
-<script defer="true" src="example.dart.js"></script>
+<script defer src="example.dart.js"></script>
 </body>
 </html>
