--- a/smart_packages/smart_arrays_numerics/example.html
+++ b/smart_packages/smart_arrays_numerics/example.html
@@ -9,6 +9,6 @@
     <div id="app_div">
     </div>
 
-    <script defer="true" src="example.dart.js"></script>
+    <script defer src="example.dart.js"></script>
   </body>
 </html>
