add shadertoy fontgen update

--- a/shadertoy_fontgen/generate_sdf.html
+++ b/shadertoy_fontgen/generate_sdf.html
@@ -711,7 +711,7 @@ DONT AUTOGENERATE */
     </script>
 	
 <script type="text/javascript">
-	const googleFontsAPIKey = 'AIzaSyBLykzaVrB2C57zINR3-1nbnbLzWnUp2sM'; // Replace with your actual Google Fonts API key
+// This api key will only work from https://timmaffett.github.io/shadertoy_fontgen/generate_sdf.html
 const categories = ['all', 'monospace', 'sans-serif', 'serif', 'display', 'handwritten'];
 const exampleText = "This is an example text.";
 
@@ -719,7 +719,7 @@ var webFontResponse = undefined;
 var webFontResponseData = undefined;
 async function fetchInitialFontInfo() {
   if(webFontResponse==undefined) {
-	const url = `https://www.googleapis.com/webfonts/v1/webfonts?sort=popularity&key=${googleFontsAPIKey}`;
+	const url = `https://www.googleapis.com/webfonts/v1/webfonts?sort=popularity&key=AIzaSyBLykzaVrB2C57zINR3-1nbnbLzWnUp2sM`;
 	webFontResponse = await fetch(url);
 	webFontResponseData = await webFontResponse.json();
   }
@@ -727,13 +727,6 @@ async function fetchInitialFontInfo() {
 
 // Function to fetch Google Fonts based on category
 async function fetchFonts(category) {
-  //var url = `https://www.googleapis.com/webfonts/v1/webfonts?sort=popularity&key=${googleFontsAPIKey}`;
-  //if (category !== 'all') {
-  //  url += `&category=${category}`;
-  //}
-  //const response = await fetch(url);
-  //const data = await response.json();
-  //return data.items;
   await fetchInitialFontInfo();
   if (category !== 'all') {
 	  const categoryFonts = webFontResponseData.items.filter(font => font.category === category);
@@ -741,16 +734,6 @@ async function fetchFonts(category) {
   } else {
 	return webFontResponseData.items.filter( font => true );
   }
-}
-
-// Function to fetch monospaced Google Fonts
-async function fetchMonospacedFonts() {
-  //const url = `https://www.googleapis.com/webfonts/v1/webfonts?sort=popularity&key=${googleFontsAPIKey}`;
-  //const response = await fetch(url);
-  //const data = await response.json();
-  await fetchInitialFontInfo();
-  const monospacedFonts = webFontResponseData.items.filter(font => font.category === 'monospace');
-  return monospacedFonts;
 }
 
 // Function to create the category dropdown menu
@@ -854,15 +837,6 @@ async function init() {
 
 init();
 
-</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5V6ETC4BHQ');
 </script>
   </body>
 </html>
