--- a/shadertoy_fontgen/generate_sdf.html
+++ b/shadertoy_fontgen/generate_sdf.html
@@ -838,5 +838,14 @@ async function init() {
 init();
 
 </script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5V6ETC4BHQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5V6ETC4BHQ');
+</script>
   </body>
 </html>
